Rename file. Fix some icon heights

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-gray-800" role="contentinfo">
   <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 md:flex md:items-center md:justify-between lg:px-8">
-    {% include nav-social.html %}
+    {% include social-nav.html %}
 
     <div class="mt-8 md:mt-0 md:order-1">
       <p class="text-center text-base leading-6 text-gray-400">
