--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -1,6 +1,17 @@
-<div class="py-20">
-  <div class="max-w-xl lg:max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
-    <ul class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
+<div class="py-20 relative bg-gray-50">
+  <div class="absolute inset-0">
+    <div class="bg-white h-1/3 sm:h-2/3"></div>
+  </div>
+  <div class="relative max-w-xl lg:max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="text-center">
+      <h2 class="text-3xl leading-9 tracking-tight font-extrabold text-gray-900 sm:text-4xl sm:leading-10">
+        Featured Projects
+      </h2>
+      <p class="mt-3 max-w-2xl mx-auto text-xl leading-7 text-gray-500 sm:mt-4">
+        Take a look at some of the projects I've been working on. I tend to work with a wide variety of technologies.
+      </p>
+    </div>
+    <ul class="mt-12 grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3">
       {% for featured in site.data.featured %}
       <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow border border-gray-200">
         <div class="flex items-center justify-center bg-gray-100 bg-cover bg-bottom rounded-t-md h-60"
