Move head tag to the head includes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<head>
 {% comment %}
 {% seo %}
 {% feed_meta %}
@@ -14,3 +15,4 @@
 {% if jekyll.environment == "production" %}
   {% include analytics.html %}
 {% endif %}
+</head>
