--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -34,7 +34,7 @@
                 {{ post.title }}
               </h3>
               <p class="mt-3 text-base leading-6 text-gray-500">
-                {{ post.excerpt }}
+                {{ post.excerpt | strip_html | strip_newlines | truncate: 200 }}
               </p>
             </a>
           </div>
