--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
           {%- assign my_page = site.pages | where: "path", path | first -%}
           {%- assign current = nil -%}
           {%- if page.url == my_page.url -%}
-            {%- assign current = 'border-green-600 hover:border-green-700 text-gray-900 hover:text-gray-900 focus:border-green-700' -%}
+            {%- assign current = 'border-emerald-600 hover:border-emerald-700 text-gray-900 hover:text-gray-900 focus:border-emerald-700' -%}
           {%- endif -%}
           {%- if my_page.title -%}
             <a href="{{ my_page.url | relative_url }}" class="{% unless forloop.first %}ml-8{% endunless %} {{ current }} inline-flex items-center px-1 pt-1 border-b-4 border-transparent text-sm font-medium leading-5 text-gray-600 hover:text-gray-800 hover:border-gray-300 focus:outline-none focus:text-gray-700 focus:border-gray-300 transition duration-150 ease-in-out">
@@ -56,7 +56,7 @@
       {%- assign my_page = site.pages | where: "path", path | first -%}
       {%- assign current = nil -%}
       {%- if page.url == my_page.url -%}
-        {%- assign current = 'border-green-500 text-green-700 bg-green-50 focus:text-green-800 focus:bg-green-100 focus:border-green-700' -%}
+        {%- assign current = 'border-emerald-500 text-emerald-700 bg-emerald-50 focus:text-emerald-800 focus:bg-emerald-100 focus:border-emerald-700' -%}
       {%- endif -%}
       {%- if my_page.title -%}
         <a href="{{ my_page.url | relative_url }}" class="{% unless forloop.first %}mt-1{% endunless %} {{ current }} block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-600 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300 transition duration-150 ease-in-out">
