--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -25,7 +25,7 @@
             <div class="mt-3 text-center md:mt-0 md:ml-4 md:flex md:items-center">
               <div class="text-base leading-6 font-medium text-gray-900">Ryan Doll</div>
 
-              <svg class="hidden md:block mx-1 h-5 w-5 text-green-600" fill="currentColor" viewBox="0 0 20 20">
+              <svg class="hidden md:block mx-1 h-5 w-5 text-emerald-600" fill="currentColor" viewBox="0 0 20 20">
                 <path d="M11 0h3L9 20H6l5-20z" />
               </svg>
 
