--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -1,17 +1,20 @@
-<div class="bg-gradient-to-r from-emerald-700 via-emerald-600 to-emerald-500 border-t-2 border-b-2 border-emerald-600 shadow-inner">
+<div class="bg-gradient-to-r from-emerald-700 via-emerald-600 to-emerald-500 border-b-2 border-emerald-600">
   <div class="max-w-screen-xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
     <div class="text-center">
-      <h2 class="mt-1 text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl" style="text-shadow: 0 1px #111;">
+      <h2
+        class="mt-1 text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl"
+        style="text-shadow: 0 1px #111;">
         Nathan
         <br class="xl:hidden">
         <span class="text-emerald-900" style="text-shadow: 0 -1px 0 #111;">Jessen</span>
       </h2>
       <p class="max-w-2xl mt-10 mx-auto text-2xl leading-7 font-medium text-white" style="text-shadow: 0 1px #111;">
-        Front-end engineer building fast static sites and modern web applications with React, Redux, and Web3.
+        Front-end engineer building modern web applications with React, Redux, and Web3.
       </p>
       <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
         <div class="rounded-md shadow-md">
-          <a href="{{ site.github_url }}" target="_blank" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-emerald-600 bg-white hover:bg-gray-200 focus:outline-none focus:border-white focus:shadow-outline-white transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
+          <a href="{{ site.github_url }}" target="_blank"
+            class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-emerald-600 bg-white hover:bg-gray-200 focus:outline-none focus:border-white focus:shadow-outline-white transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
             View GitHub
           </a>
         </div>
