Use liquid open close tags for whitespace control

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | absolute_url }}">
   <link rel="icon" href="{{ '/favicon.ico' | absolute_url }}" type="image/x-icon">
 
-  {% if jekyll.environment == "production" %}
+  {%- if jekyll.environment == "production" -%}
   <link rel="preconnect" href="//www.google-analytics.com">
-  {% include analytics.html %}
-  {% endif %}
+  {%- include analytics.html -%}
+  {%- endif -%}
 </head>
