--- a/_includes/attachment-list-item.html
+++ b/_includes/attachment-list-item.html
@@ -1,7 +1,7 @@
 <!-- border-t border-gray-200 -->
 <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm leading-5">
   <div class="w-0 flex-1 flex items-center">
-    {% include clip-icon.html %}
+    {%- include clip-icon.html -%}
     <span class="ml-2 flex-1 w-0 truncate">
       {{ attachment.name }}
     </span>
