--- a/_includes/attachment-list.html
+++ b/_includes/attachment-list.html
@@ -4,9 +4,9 @@
   </dt>
   <dd class="mt-1 text-sm leading-5 text-gray-900">
     <ul class="border border-gray-200 rounded-md">
-      {% for attachment in site.data.attachments %}
-      {% include attachment-list-item.html %}
-      {% endfor %}
+      {%- for attachment in site.data.attachments -%}
+      {%- include attachment-list-item.html -%}
+      {%- endfor -%}
     </ul>
   </dd>
 </div>
