--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="col-span-1">
-        {% include attachment-list.html %}
+        {%- include attachment-list.html -%}
       </div>
     </dl>
   </div>
