Update projects and cv

--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -57,9 +57,11 @@
         </dd>
       </div>
 
+      {%- comment -%}
       <div class="col-span-1">
         {%- include attachment-list.html -%}
       </div>
+      {%- endcomment -%}
     </dl>
   </div>
 </div>
