--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -1,24 +1,49 @@
-<div class="bg-gradient-to-r from-emerald-700 via-emerald-600 to-emerald-500 border-b-2 border-emerald-600">
-  <div class="max-w-screen-xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
-    <div class="text-center">
-      <h2
-        class="mt-1 text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl"
-        style="text-shadow: 0 1px #111;">
-        Nathan
-        <br class="xl:hidden">
-        <span class="text-emerald-900" style="text-shadow: 0 -1px 0 #111;">Jessen</span>
-      </h2>
-      <p class="max-w-2xl mt-10 mx-auto text-2xl leading-7 font-medium text-white" style="text-shadow: 0 1px #111;">
-        Front-end engineer building modern web applications with React, Redux, and Web3.
-      </p>
-      <div class="mt-5 max-w-md mx-auto sm:flex sm:justify-center md:mt-8">
-        <div class="rounded-md shadow-md">
-          <a href="{{ site.github_url }}" target="_blank"
-            class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base leading-6 font-medium rounded-md text-emerald-600 bg-white hover:bg-gray-200 focus:outline-none focus:border-white focus:shadow-outline-white transition duration-150 ease-in-out md:py-4 md:text-lg md:px-10">
-            View GitHub
-          </a>
-        </div>
+<div
+  class="py-20 px-4 sm:px-6 lg:px-8 max-w-screen-xl mx-auto min-h-screen flex flex-col md:flex-row gap-6 justify-center md:justify-between -mt-16">
+  <div class="flex flex-col justify-center items-center md:order-last">
+    <div class="relative h-48 w-28 md:h-96 md:w-60 md:-translate-x-32">
+      <div class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 -translate-x-10 md:-translate-x-24 block bg-accent h-48 w-30 md:h-96 md:w-60 rounded-lg -rotate-12">
+      </div>
+      <div class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 block bg-secondary h-48 w-30 md:h-96 md:w-60 rounded-lg"></div>
+      <div
+        class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 top-5 translate-x-10 md:translate-x-24 block bg-primary h-48 w-30 md:h-96 md:w-60 rounded-lg rotate-12">
       </div>
     </div>
   </div>
+
+  <div class="flex flex-col justify-center z-10">
+    <h2 class="text-xl md:text-2xl font-medium text-primary">
+      Nathan Jessen
+    </h2>
+    <p class="text-4xl leading-tight tracking-wider uppercase text-white font-extrabold mt-2 mb-8">
+      Frontend Developer
+      <br />
+      Based in Austin
+    </p>
+    <ul class="text-neutral-content space-y-2 text-xl">
+      <li>React</li>
+      <li>TypeScript</li>
+      <li>Storybook</li>
+    </ul>
+    <div class="flex items-start gap-8 mt-8">
+      <div class="flex">
+        <h3 class="leading-snug">Years of <br>Experience</h3>
+        <p class="whitespace-nowrap text-4xl font-extrabold order-first pr-3 text-white">
+          10+
+        </p>
+      </div>
+      <div class="flex">
+        <h3 class="leading-snug">Lines <br>of Code</h3>
+        <p class="whitespace-nowrap text-4xl font-extrabold order-first pr-3 text-white">
+          1M+
+        </p>
+      </div>
+    </div>
+    <!-- <div class="mt-6">
+      <a href="{{ site.github_url }}" target="_blank" class="btn btn-primary btn-lg btn-wide">
+        View GitHub
+      </a>
+    </div> -->
+  </div>
+
 </div>
