--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -2,9 +2,12 @@
   class="py-20 px-4 sm:px-6 lg:px-8 max-w-screen-xl mx-auto min-h-screen flex flex-col md:flex-row gap-6 justify-center md:justify-between -mt-16">
   <div class="flex flex-col justify-center items-center md:order-last">
     <div class="relative h-48 w-28 md:h-96 md:w-60 md:-translate-x-32">
-      <div class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 -translate-x-10 md:-translate-x-24 block bg-accent h-48 w-30 md:h-96 md:w-60 rounded-lg -rotate-12">
+      <div
+        class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 -translate-x-10 md:-translate-x-24 block bg-accent h-48 w-30 md:h-96 md:w-60 rounded-lg -rotate-12">
       </div>
-      <div class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 block bg-secondary h-48 w-30 md:h-96 md:w-60 rounded-lg"></div>
+      <div
+        class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 block bg-secondary h-48 w-30 md:h-96 md:w-60 rounded-lg">
+      </div>
       <div
         class="absolute hover:scale-110 transition-all ease-in-out duration-300 inset-0 top-5 translate-x-10 md:translate-x-24 block bg-primary h-48 w-30 md:h-96 md:w-60 rounded-lg rotate-12">
       </div>
@@ -21,9 +24,9 @@
       Based in Austin
     </p>
     <ul class="text-neutral-content space-y-2 text-xl">
-      <li>React</li>
-      <li>TypeScript</li>
-      <li>Storybook</li>
+      <li>React + TypeScript Applications</li>
+      <li>Storybook Component Libraries</li>
+      <li>WCAG 2.1 Level AA Compliance</li>
     </ul>
     <div class="flex items-start gap-8 mt-8">
       <div class="flex">
@@ -33,9 +36,9 @@
         </p>
       </div>
       <div class="flex">
-        <h3 class="leading-snug">Lines <br>of Code</h3>
+        <h3 class="leading-snug">Hours of <br>Availability</h3>
         <p class="whitespace-nowrap text-4xl font-extrabold order-first pr-3 text-white">
-          1M+
+          40
         </p>
       </div>
     </div>
