--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -42,11 +42,17 @@
         </p>
       </div>
     </div>
-    <!-- <div class="mt-6">
-      <a href="{{ site.github_url }}" target="_blank" class="btn btn-primary btn-lg btn-wide">
-        View GitHub
+    <div class="mt-8">
+      <a href="{{ 'assets/Nathan-Jessen-Resume-Frontend-Developer.pdf' | absolute_url }}"
+        download="Nathan-Jessen-Resume-Frontend-Developer.pdf" class="btn btn-outline btn-primary btn-wide gap-1">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd"
+            d="M6 2a2 2 0 00-2 2v12a2 2 0 002 2h8a2 2 0 002-2V7.414A2 2 0 0015.414 6L12 2.586A2 2 0 0010.586 2H6zm5 6a1 1 0 10-2 0v3.586l-1.293-1.293a1 1 0 10-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 11.586V8z"
+            clip-rule="evenodd" />
+        </svg>
+        Download Resume
       </a>
-    </div> -->
+    </div>
   </div>
 
 </div>
