Update content and revert styles from daisy

--- a/_styles/style.css
+++ b/_styles/style.css
@@ -10,7 +10,7 @@
 
   .ldquo:before,
   .rdquo:after {
-    @apply text-primary text-3xl;
+    @apply text-emerald-500 text-3xl;
   }
 
   .ldquo:before {
